# destructure

./: Cargo.toml  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml
bench/: program.rs
src/: lib.rs
tests/: 01-parse.rs  02-generate.rs  03-generics.rs  04-freeze.rs  05-reconstructor.rs  06-try-reconstructor.rs  07-mutation.rs  08-try-mutation.rs  09-multiple-generics.rs  10-destructure-ref.rs  11-skip-field.rs  program.rs
