[package]
name = "destructure"
version = "0.3.0"
edition = "2021"
authors = ["ReiRokusanami <reirokusanami.rdh@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Automation of Destructure Pattern"
repository = "https://github.com/HalsekiRaika/destructure"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/program.rs"

[dev-dependencies]
trybuild = "1.0"
anyhow = "1"

[dependencies]
syn = { version = "2", features = ["extra-traits", "derive"] }
quote = "1"